<resources>
    <string name="app_name">forms</string>
    <string name="secao_eleitoral">Seção Eleitoral</string>
    <string name="zona_eleitoral">Zona Eleitoral</string>
    <string name="titulo_de_eleitor">Titulo de Eleitor</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="enviar">Enviar</string>
    <string name="partido_3">PT</string>
    <string name="partido_2">PMDB</string>
    <string name="partido_1">PL</string>
    <string name="selecao_partido">Selecione o Partido que você mais gosta:</string>
    <string name="cidade">Cidade</string>
    <string name="estadoText">Selecione seu estado</string>
    <string name="selecione_seu_prefeito_a">Selecione seu Prefeito(a)</string>
    <string name="selecione_seu_prefeito">Selecione seu Prefeito(a):</string>
    <string name="selecione_seu_vereador_a">Selecione seu vereador(a):</string>
    <string name="fechar_pesquisa">Fechar Pesquisa</string>

    <string-array name="estados">
        <item>Goiás</item>
        <item>Rio de Janeiro</item>
        <item>São Paulo</item>
    </string-array>

    <string-array name="candidatos_goias">
        <item>Flavio</item>
        <item>Jose</item>
        <item>Diego</item>
        <item>Italo</item>
    </string-array>

    <string-array name="candidatos_rio">
        <item>Maria</item>
        <item>Fernanda</item>
        <item>Denise</item>
        <item>Joana</item>
    </string-array>

    <string-array name="candidatos_sp">
        <item>Zezim</item>
        <item>Cumpadi</item>
        <item>Tiao</item>
        <item>Toin</item>
    </string-array>


    <!-- Vereadores -->
    <string-array name="vereador_go">
        <item>Zezin do Disc</item>
        <item>Tiao Roxo</item>
        <item>Cearense do Bar</item>
        <item>Julio Barbeiro</item>
    </string-array>

    <string-array name="vereador_rio">
        <item>Matheus do Trem</item>
        <item>Fernandão</item>
        <item>Gabriel do Milho</item>
        <item>Pedro Salva-Vidas</item>
    </string-array>

    <string-array name="vereador_sp">
        <item>Pablo Datena</item>
        <item>Zé Gotinha</item>
        <item>Baiano da Soneca</item>
        <item>Antonio Bicudo</item>
    </string-array>

</resources>