<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageTRE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/tre_image" />


    <!-- Nome -->
    <EditText
        android:id="@+id/nomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo" />

    <!-- Titulo -->
    <EditText
        android:id="@+id/tituloEleitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_de_eleitor"
        android:inputType="number" />

    <!-- Zona -->
    <EditText
        android:id="@+id/zona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zona_eleitoral" />

    <!-- Seção -->
    <EditText
        android:id="@+id/secao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secao_eleitoral" />

    <!-- Seção -->
    <EditText
        android:id="@+id/cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade" />

    <!-- Spinner Estados-->
    <Spinner
        android:id="@+id/spinnerEstados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estados" />

    <!-- Spinner Prefeitos-->
    <Spinner
        android:id="@+id/spinnerPrefeitos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Seleção de Partido -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecao_partido" />

    <CheckBox
        android:id="@+id/partido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/partido_1" />

    <CheckBox
        android:id="@+id/partido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/partido_2" />

    <CheckBox
        android:id="@+id/partido3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/partido_3" />

    <Button
        android:id="@+id/btnConcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />
</LinearLayout>